website/websites/u64/code/knucleotide.2.jruby.log

Mon, 16 Sep 2013 20:45:33 GMT

MAKE:
mv knucleotide.jruby-2.jruby knucleotide.rb
0.01s to complete and log all make actions

COMMAND LINE:
/usr/local/src/jruby-1.7.4/bin/jruby -Xcompile.invokedynamic=true -J-server -J-Xmn512m -J-Xms2048m -J-Xmx2048m knucleotide.rb 0 < knucleotide-input250000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:
Java HotSpot(TM) 64-Bit Server VM warning: You have loaded library /usr/local/src/jruby-1.7.4/lib/native/arm-Linux/libjffi-1.2.so which might have disabled stack guard. The VM will try to fix the stack guard now.
It's highly recommended that you fix the library with 'execstack -c <libfile>', or link it with '-z noexecstack'.

SyntaxError: knucleotide.rb:37: syntax error, unexpected kWHILE

while (line !~ /^>/) & line do
     ^
